Fix footer spacing and make feedback text bigger

--- a/wp-content/themes/avl/style.css
+++ b/wp-content/themes/avl/style.css
@@ -134,6 +134,10 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 /* Header */
 
+#masthead nav > .container-fluid {
+	padding: 0;
+}
+
 #masthead .custom-logo {
 	width: 154px;
 	height: 38px;
@@ -189,6 +193,7 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 	font-size: 1.25rem;
 	text-transform: uppercase;
 	border: 1px solid transparent;
+	white-space: nowrap;
 }
 
 #primary-menu .dropdown-item {
@@ -236,8 +241,16 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 /* Footer */
 
+#content {
+	min-height: 60vh;
+}
+
 #colophon {
 	border-top: 4px solid #AAAD00;
+}
+
+footer .feedback-container {
+	padding: 1em 0;
 }
 
 #feedback-button {
@@ -367,61 +380,6 @@ nav.navbar {
 	padding-top: 2em;
 }
 
-/* #google-translate {
-	width: 4rem;
-	height: 2.375rem;
-	position: relative;
-	font-size: 1rem;
-	color: rgba(255,255,255,.5);
-	border: 1px solid #A6BFD5;
-	border-radius: .25rem;
-}
-
-#google-translate:hover {
-	color: rgba(255,255,255,.75);
-	border: 1px solid #fff;
-}
-
-#google-translate:before {
-	font-family: 'Lindua';
-	content: '\ed1a';
-	width: 2.5rem;
-	line-height: 2.375rem;
-	text-align: center;
-	position: absolute;
-	left: 0;
-	bottom: 0;
-}
-
-#google-translate:after {
-	font-family: 'Lindua';
-	content: '\ee04';
-	width: 2.5rem;
-	line-height: 2.375rem;
-	text-align: center;
-	position: absolute;
-	right: 0;
-	bottom: 0;
-}
-
-#google-translate .goog-te-gadget-simple {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	z-index: 1;
-	display: block;
-	padding: 0;
-	border: none;
-	background-color: transparent;
-}
-
-#google-translate .goog-te-gadget-simple > span,
-#google-translate .goog-te-gadget-simple .goog-te-gadget-icon {
-	display: none;
-} */
-
 /* Media Queries */
 
 /* Extra Small + Small */
@@ -429,7 +387,7 @@ nav.navbar {
 @media (max-width: 767.98px) {
 	#masthead {
 		position: relative;
-		padding-top: 64px;
+		padding-top: 6em;
 	}
 
 	#masthead .navbar {
@@ -453,8 +411,16 @@ nav.navbar {
 
 /* Medium */
 
-@media (min-width: 767px) {
+@media (min-width: 768px) {
 	/* Main Menu */
+	nav.navbar {
+		padding-right: 1em;
+		padding-left: 1em;
+	}
+	#primary-menu .nav-link {
+		padding: 0 0.25em;
+		font-size: 1em;
+	}
 
 	#primary-menu .show .nav-link,
 	#primary-menu .nav-link:hover {
@@ -505,7 +471,6 @@ nav.navbar {
 
 	#colophon {
 		position: absolute;
-		bottom: 0;
 		left: 0;
 		right: 0;
 	}
@@ -514,6 +479,10 @@ nav.navbar {
 /* Large */
 
 @media (min-width: 992px) {
+	#primary-menu .nav-link {
+		padding: 0 1em;
+	}
+
 	#masthead .custom-logo {
 		/* height: 80px; */
 		/* width: 307px */
